--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,13 @@
 application: nerdpubtrivia
 version: 1
-runtime: python
+runtime: python27
+threadsafe: no
+#runtime: python
 api_version: 1
 
 builtins:
 - appstats: on
-- datastore_admin: on
+#- datastore_admin: on
 - remote_api: on
 
 handlers:
