Fixed redirect indentation issues.  Added django library in new 2.7 format to app.yaml.

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,10 @@ builtins:
 #- datastore_admin: on
 - remote_api: on
 
+libraries:
+- name: django
+  version: latest
+
 handlers:
 - url: /
   static_files: index.html
